WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27589
Audio element at default width shouldn't have time field.
https://bugs.webkit.org/show_bug.cgi?id=27589
Summary
Audio element at default width shouldn't have time field.
Pierre d'Herbemont
Reported
2009-07-22 17:57:18 PDT
Audio element at default width shouldn't have time field in its controls. <
rdar://problem/7083357
>
Attachments
WebCore:
(8.95 KB, patch)
2009-07-22 19:16 PDT
,
Pierre d'Herbemont
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre d'Herbemont
Comment 1
2009-07-22 19:16:23 PDT
Created
attachment 33310
[details]
WebCore: 2009-07-22 Pierre d'Herbemont <
pdherbemont@apple.com
> Reviewed by NOBODY (OOPS!). Audio element at default width shouldn't have time field.
https://bugs.webkit.org/show_bug.cgi?id=27589
* rendering/MediaControlElements.cpp: (WebCore::MediaControlTimeDisplayElement::setVisible): Make sure we don't forget to remember the visibility if there is no renderer. LayoutTests: 2009-07-22 Pierre d'Herbemont <
pdherbemont@apple.com
> Reviewed by NOBODY (OOPS!). Audio element at default width shouldn't have time field.
https://bugs.webkit.org/show_bug.cgi?id=27589
* platform/mac-snowleopard/Skipped: Enables back audio-controls-rendering. * platform/mac/media/audio-controls-rendering-expected.checksum: * platform/mac/media/audio-controls-rendering-expected.png: * platform/mac/media/audio-controls-rendering-expected.txt: --- 7 files changed, 86 insertions(+), 46 deletions(-)
Pierre d'Herbemont
Comment 2
2009-07-23 11:59:56 PDT
http://trac.webkit.org/changeset/46279
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug